--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
 
     <%= yield :head %>
 
+    <%= stylesheet_link_tag "https://css.hackclub.com/theme.css" %>
+    <%= stylesheet_link_tag "https://css.hackclub.com/fonts.css" %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
