Fix CDN CSS versions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
     <%= yield :head %>
 
     <%= stylesheet_link_tag :app %>
-    <%= stylesheet_link_tag "https://css.hackclub.com/theme.css" %>
-    <%= stylesheet_link_tag "https://css.hackclub.com/fonts.css" %>
+    <%= stylesheet_link_tag "https://cdn.jsdelivr.net/gh/hackclub/css@08412269bf9e02b9797b273f5bc2631124cf13cf/theme.css" %>
+    <%= stylesheet_link_tag "https://cdn.jsdelivr.net/gh/hackclub/css@08412269bf9e02b9797b273f5bc2631124cf13cf/fonts.css" %>
 
     <%= javascript_importmap_tags %>
   </head>
